load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "bundle_proto",
    srcs = ["bundle.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/firestore/v1:v1_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "bundle_proto_ts",
    proto = ":bundle_proto",
)
