load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "bundle_proto",
    srcs = ["bundle.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/firestore/v1:document_proto",
        "//proto/src/google/firestore/v1:query_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "bundle_proto_ts",
    proto = ":bundle_proto",
)
