load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "viewport_proto",
    srcs = ["viewport.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/google/type:latlng_proto"],
)

ts_proto_library(
    name = "viewport_proto_ts",
    proto = ":viewport_proto",
)
