load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "iam_policy_proto",
    srcs = ["iam_policy.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/iam/v1:v1_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

proto_library(
    name = "options_proto",
    srcs = ["options.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "policy_proto",
    srcs = ["policy.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/type:type_proto"],
)

ts_proto_library(
    name = "iam_policy_proto_ts",
    has_services = True,
    proto = ":iam_policy_proto",
)

ts_proto_library(
    name = "options_proto_ts",
    proto = ":options_proto",
)

ts_proto_library(
    name = "policy_proto_ts",
    proto = ":policy_proto",
)
