load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "iam_policy_proto",
    srcs = ["iam_policy.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":options_proto",
        ":policy_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/api:field_behavior_proto",
        "//proto/src/google/api:resource_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

proto_library(
    name = "options_proto",
    srcs = ["options.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "policy_proto",
    srcs = ["policy.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/google/type:expr_proto"],
)

ts_proto_library(
    name = "iam_policy_proto_ts",
    has_services = True,
    proto = ":iam_policy_proto",
)

ts_proto_library(
    name = "options_proto_ts",
    proto = ":options_proto",
)

ts_proto_library(
    name = "policy_proto_ts",
    proto = ":policy_proto",
)
