load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "workload_identity_pool_proto",
    srcs = ["workload_identity_pool.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/longrunning:longrunning_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

ts_proto_library(
    name = "workload_identity_pool_proto_ts",
    has_services = True,
    proto = ":workload_identity_pool_proto",
)
