load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "workload_identity_pool_proto",
    srcs = ["workload_identity_pool.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/api:field_behavior_proto",
        "//proto/src/google/api:resource_proto",
        "//proto/src/google/longrunning:operations_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

ts_proto_library(
    name = "workload_identity_pool_proto_ts",
    has_services = True,
    proto = ":workload_identity_pool_proto",
)
