load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "deny_proto",
    srcs = ["deny.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/google/type:expr_proto"],
)

proto_library(
    name = "policy_proto",
    srcs = ["policy.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":deny_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/api:field_behavior_proto",
        "//proto/src/google/longrunning:operations_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "deny_proto_ts",
    proto = ":deny_proto",
)

ts_proto_library(
    name = "policy_proto_ts",
    has_services = True,
    proto = ":policy_proto",
)
