load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "deny_proto",
    srcs = ["deny.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/type:type_proto"],
)

proto_library(
    name = "policy_proto",
    srcs = ["policy.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/iam/v2beta:v2beta_proto",
        "//google/longrunning:longrunning_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "deny_proto_ts",
    proto = ":deny_proto",
)

ts_proto_library(
    name = "policy_proto_ts",
    has_services = True,
    proto = ":policy_proto",
)
